Bug 1072704 - Textarea resize handle remains unchanged, when border property is modified. r=jimm